Atualiza notebook push_atualizacoes

--- a/push_atualizacoes.ipynb
+++ b/push_atualizacoes.ipynb
@@ -16603,7 +16603,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "push_campo",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
