--- a/push_atualizacoes.ipynb
+++ b/push_atualizacoes.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "#ROTA GERAL\n",
     "\n",
-    "dotenv.load_dotenv(override=True)\n",
+    "dotenv.load_dotenv()\n",
     "\n",
     "session = requests.Session()\n",
     "\n",
