Add default value for nome_grupo in enviar_email function

--- a/push_atualizacoes.ipynb
+++ b/push_atualizacoes.ipynb
@@ -5874,7 +5874,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def enviar_email(destinatarios, df_tratado, nome_grupo):\n",
+    "def enviar_email(destinatarios, df_tratado, nome_grupo=""):\n",
     "    if df_tratado is None or df_tratado.empty:\n",
     "        print(\"Não há contratos vencidos para enviar por e-mail.\")\n",
     "        return\n",
