Atualização do arquivo

--- a/push_atualizacoes.ipynb
+++ b/push_atualizacoes.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "#ROTA GERAL\n",
     "\n",
-    "dotenv.load_dotenv()\n",
+    "dotenv.load_dotenv(override=True)\n",
     "\n",
     "session = requests.Session()\n",
     "\n",
@@ -5874,7 +5874,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def enviar_email(destinatarios, df_tratado, nome_grupo=""):\n",
+    "def enviar_email(destinatarios, df_tratado, nome_grupo):\n",
     "    if df_tratado is None or df_tratado.empty:\n",
     "        print(\"Não há contratos vencidos para enviar por e-mail.\")\n",
     "        return\n",
@@ -5945,12 +5945,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enviar_email([destinatario_hmcg], contratos_hmcg)\n",
-    "enviar_email([destinatario_rocio], contratos_rocio)\n",
-    "enviar_email([destinatario_iir], contratos_iir_coord)\n",
-    "enviar_email([destinatario_scs], contratos_stacsantos)\n",
-    "enviar_email([destinatario_vivi], contratos_vivi)\n",
-    "enviar_email([destinatario_capiberibe], contratos_capiberibe)"
+    "enviar_email([destinatario_hmcg], contratos_hmcg, \"HMCG\")\n",
+    "enviar_email([destinatario_rocio], contratos_rocio, \"Rocio\")\n",
+    "enviar_email([destinatario_iir], contratos_iir_coord, \"IIR\")\n",
+    "enviar_email([destinatario_scs], contratos_stacsantos, \"Sta. Santos\")\n",
+    "enviar_email([destinatario_vivi], contratos_vivi, \"Viviane\")\n",
+    "enviar_email([destinatario_capiberibe], contratos_capiberibe, \"Capiberibe\")"
    ]
   },
   {
