correção de erros no arquivo

--- a/push_atualizacoes.ipynb
+++ b/push_atualizacoes.ipynb
@@ -7860,7 +7860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "8aefbe83",
    "metadata": {},
    "outputs": [
@@ -8168,7 +8168,7 @@
     "seguimento.loc[:, 'ds_nome_visita'] = seguimento['dados_visita'].apply(lambda x: x['ds_nome_visita'] if x is not None else None)\n",
     "\n",
     "seguimento.loc[:, 'apelido_protocolo'] = seguimento['dados_protocolo'].apply(lambda x: x['apelido_protocolo'] if x is not None else None)\n",
-    "seguimento['data_estimada'] = pd.to_datetime(seguimento['data_estimada']).dt.date\n",
+    "seguimento['data_estimada'] = pd.to_datetime(seguimento['data_estimada'], errors='coerce')\n",
     "seguimento.head(5)"
    ]
   },
@@ -9533,7 +9533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "b3298774",
    "metadata": {},
    "outputs": [
@@ -10152,12 +10152,13 @@
     "nova_ordem = [\"apelido_centro\", \"dados_participante_id\", \"ds_nome_visita\",\"data_estimada\",\"ds_descricao\"]\n",
     "visitas_reordenado = visitas_filtrado[nova_ordem]\n",
     "visitas_reordenado.rename(columns={'apelido_centro':'Estudo/Centro', 'dados_participante_id': 'ID Participante', 'ds_nome_visita': 'Tipo Visita', 'data_estimada':'Data Estimada', 'ds_descricao':'Status'}, inplace=True)\n",
+    "visitas_reordenado['Data Estimada'] = pd.to_datetime(visitas_reordenado['Data Estimada'], errors='coerce')\n",
     "visitas_reordenado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "d7338902",
    "metadata": {},
    "outputs": [
@@ -10760,6 +10761,8 @@
     }
    ],
    "source": [
+    "datas_visitas = visitas_reordenado.copy()\n",
+    "datas_visitas['Data Estimada'] = pd.to_datetime(datas_visitas['Data Estimada'], errors='coerce')\n",
     "datas_visitas = visitas_reordenado.dropna(subset=[\"Data Estimada\"])\n",
     "datas_visitas = datas_visitas.sort_values(by= \"Data Estimada\", ascending=True)\n",
     "datas_visitas = datas_visitas[~datas_visitas[\"Tipo Visita\"].isin([\"Unscheduled\", \"Triagem\", \"End of Study\"])]\n",
@@ -10769,7 +10772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ff82b413",
    "metadata": {},
    "outputs": [
@@ -10814,7 +10817,7 @@
    ],
    "source": [
     "def verificar_visitas_proximos_dias(datas_visitas, dias_para_visita=20):\n",
-    "    datas_visitas['Data Estimada'] = pd.to_datetime(datas_visitas['Data Estimada'])\n",
+    "    datas_visitas['Data Estimada'] = pd.to_datetime(datas_visitas['Data Estimada'], errors='coerce')\n",
     "    \n",
     "    hoje = datetime.today()\n",
     "    limite_visita = hoje + timedelta(days=dias_para_visita)\n",
